Sync VS Code settings and plugin keybindings
- Update settings.json to standardize editor preferences and formatting behavior.
- Update vscode-shortcuts-plugin/keybindings.json to remap and resolve shortcut conflicts, aligning common shortcuts with IntelliJ-style workflow.
- Note: vscode-shortcuts-plugin/vscode-intellij-idea-keybindings has local edits that are not staged and will be reviewed/committed separately.

--- a/settings.json
+++ b/settings.json
@@ -96,5 +96,9 @@
   },
   "editor.fontSize": 13.5,
   "editor.fontWeight": "500",
-  "editor.lineHeight": 22
+  "editor.lineHeight": 22,
+  "files.autoSave": "onWindowChange",
+  "workbench.tree.expandMode": "doubleClick",
+  "editor.acceptSuggestionOnEnter": "off",
+  "editor.inlineSuggest.edits.allowCodeShifting": "horizontal"
 }
